# vaultmux-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_RELEASE_v0.1.0.md  LICENSE-APACHE  README.md  RELEASE_NOTES_v0.1.0.md  REQUIREMENTS.md  RUST_PORT_PLAN.md  SECURITY.md
.github/workflows/: benchmarks.yml  ci.yml  dependencies.yml  release.yml
docs/: README.md  api-reference.md  user-guide.md
examples/: README.md  aws_secrets.rs  basic.rs  basic_usage.rs  credential_rotation.rs  environment_config.rs  error_handling.rs  multi_backend_fallback.rs
scripts/: test-aws-localstack.sh
src/: backend.rs  cli.rs  config.rs  error.rs  factory.rs  item.rs  lib.rs  session.rs  validation.rs
src/backends/: mock.rs  mod.rs
src/backends/aws/: backend.rs  mod.rs  session.rs
src/backends/azure/: backend.rs  mod.rs  session.rs
src/backends/bitwarden/: backend.rs  mod.rs  session.rs
src/backends/gcp/: backend.rs  mod.rs  session.rs
src/backends/onepassword/: backend.rs  mod.rs  session.rs
src/backends/pass/: backend.rs  mod.rs  session.rs
src/backends/wincred/: backend.rs  backend_stub.rs  mod.rs  session.rs
tests/: integration_aws.rs
